--- a/backend/.env
+++ b/backend/.env
@@ -9,11 +9,13 @@ PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,http://localhost:3000,https://localhost,https://localhost:5173"
 SECRET_KEY=changethis123
 FIRST_SUPERUSER=chanllenge@devopsdojo.com
 FIRST_SUPERUSER_PASSWORD=devopsdojo57
 USERS_OPEN_REGISTRATION=True
+
+
 
 # Emails
 SMTP_HOST=
@@ -25,7 +27,7 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=bankolejohn
 POSTGRES_USER=bankolejohn
